# repro-py-proto

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
.bazel/: bin  out  repro_py_proto  testlogs
application/: BUILD.bazel  app_lib.py  main.py
meta/: BUILD.bazel  gazelle_python.yaml  pyproject.toml  requirements.in  requirements_lock.txt
proto/: BUILD.bazel
