module(name = "repro")

### General ######################################################################
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

### Protobuf ####################################################################
bazel_dep(name = "protobuf", version = "33.4")

bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")

### Python #######################################################################
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "aspect_rules_py", version = "1.8.4")
bazel_dep(name = "rules_uv", version = "0.89.2")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
use_repo(python, "python_3_13", "python_versions", "pythons_hub")


uv = use_extension("@aspect_rules_py//uv:extension.bzl", "uv")
uv.override_package(
    name = "protobuf",
    lock = "//:uv.lock", # What does this do?
    target = "@protobuf//python:well_known_types_py_pb2",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pypi",
    python_version = "3.13",
    requirements_lock = "//meta:requirements_lock.txt",
)

use_repo(pip, "pypi")
