module(name = "repro")

### General ######################################################################
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")

### CC ##########################################################################
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

### Protobuf ####################################################################
bazel_dep(name = "protobuf", version = "33.4")

bazel_dep(name = "rules_proto_grpc_python", version = "5.8.0")

### Python #######################################################################
bazel_dep(name = "rules_python", version = "1.8.2")
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "aspect_rules_py", version = "1.10.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.13",
)
use_repo(python, "python_3_13", "python_versions", "pythons_hub")

uv = use_extension("@aspect_rules_py//uv/unstable:extension.bzl", "uv")
uv.declare_hub(
    hub_name = "pypi",      # Or whatever you wish
)
uv.project(
    hub_name = "pypi",      # Must be a declared hub
    pyproject = "//meta:pyproject.toml",
    lock = "//meta:uv.lock",
)
uv.override_package(
    name = "protobuf",
    lock = "//meta:uv.lock",
    target = "@protobuf//:well_known_types_py_pb2",
)


use_repo(uv, "pypi")
