load("@aspect_rules_py//py:defs.bzl", "py_binary", "py_library", "py_venv",  "py_image_layer")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_load")


py_library(
    name = "apple_lib",
    srcs = [
        "app_lib.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:empty_pb2",
    ],
)
py_binary(
    name = "apple",
    srcs = [
        "main.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":apple_lib",
        "@pypi//protobuf",
        "@pypi//click",
    ],
)

py_venv(
    name = "apple_venv",
    deps = [
        ":apple",
    ],
)


py_library(
    name = "orange_lib",
    srcs = [
        "app_lib.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//proto:empty_pb2",
    ],
)
py_binary(
    name = "orange",
    srcs = [
        "main.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":apple_lib",
        "@pypi//click",
    ],
)

py_venv(
    name = "orange_venv",
    deps = [
        "//proto:empty_pb2",
        ":orange",
    ],
)


py_image_layer(
    name = "app_layer",
    binary = ":apple",
)

oci_image(
    name = "docker_image",
    # We need bash and python for this.
    base = "@ubuntu",
    entrypoint = ["/application/apple"],
    exposed_ports = [],
    tars = [":app_layer"],
)

oci_load(
    name = "docker_load",
    image = ":docker_image",
    repo_tags = [
        "apple:local",
    ],
    tags = [
        "artifact",
    ],
)
