load("@pip//:requirements.bzl", "all_whl_requirements")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

exports_files([
    "requirements_lock.txt",
    "requirements.in",
])

modules_mapping(
    name = "modules_map",
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "pypi",
    requirements = "//meta:requirements_lock.txt",
)

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "//meta:requirements.in",
    requirements_txt = "//meta:requirements_lock.txt",
    # requirements_windows = "requirements_windows.txt",
)
